--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
   cached_network_image: ^3.3.0
-  carousel_slider: ^4.2.1
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
   firebase_core: ^2.17.0
   firebase_database: ^10.2.7
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_svg: ^2.0.7
   http: ^1.1.0
-  persistent_bottom_nav_bar_v2: ^4.2.8
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
