--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cached_network_image: ^3.3.0
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
+  device_preview: ^1.1.0
   equatable: ^2.0.5
   firebase_core: ^2.17.0
   firebase_database: ^10.2.7
